# Discord-RPC-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs
