[package]
name = "discord-rpc-cli"
version = "1.4.3"
edition = "2021"
authors = ["Rayr <https://rayr.ml/LinkInBio>"]
description = "A Discord RPC cli client written purely in Rust"
readme = "README.md"
repository = "https://github.com/Rayrsn/Discord-RPC-cli"
license = "MIT"
keywords = ["discord", "rich-presence", "cli", "rpc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2.0.0"
user-idle = "0.5.1"
